fixed margin spacing for body

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #222;
+    margin-right: 275px;
+    margin-left: 275px;
   }
   
   .emoji {
@@ -34,7 +36,6 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
-    margin-right: 550px;
   }
   
   .emoji {
